syntax = "proto3";
package fx.gravity.crosschain.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";

option go_package = "github.com/pundiai/fx-core/types/legacy";

// Deprecated: after block 5713000
message InitCrossChainParamsProposal {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;
  ForkParams params = 3;
  string chain_name = 4;
}

message ForkParams {
  option (gogoproto.stringer) = false;
  string gravity_id = 1;
  uint64 average_block_time = 2;
  uint64 external_batch_timeout = 3;
  uint64 average_external_block_time = 4;
  uint64 signed_window = 5;
  bytes slash_fraction = 6 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  bytes oracle_set_update_power_change_percent = 7 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  uint64 ibc_transfer_timeout_height = 8;
  // Deprecated: after block 5713000
  repeated string oracles = 9 [ (gogoproto.nullable) = true ];
  cosmos.base.v1beta1.Coin delegate_threshold = 10
      [ (gogoproto.nullable) = false ];
  int64 delegate_multiple = 11;
  uint64 bridge_call_timeout = 12;
  uint64 bridge_call_max_gas_limit = 13;
  // Deprecated: do not use
  bool enable_send_to_external_pending = 14;
  // Deprecated: do not use
  bool enable_bridge_call_pending = 15;
}

message UpdateChainOraclesProposal {
  option deprecated = true;
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  // the title of the update proposal
  string title = 1;
  // the description of the proposal
  string description = 2;

  repeated string oracles = 3;
  string chain_name = 4;
}

// Deprecated: after block 5713000
message MsgSetOrchestratorAddress {
  option (cosmos.msg.v1.signer) = "oracle_address";
  option (amino.name) = "crosschain/MsgSetOrchestratorAddress";

  string oracle_address = 1;
  string bridger_address = 2;
  string external_address = 3;
  cosmos.base.v1beta1.Coin deposit = 4 [ (gogoproto.nullable) = false ];
  string chain_name = 5;
}

// Deprecated: after block 5713000
message MsgAddOracleDeposit {
  option (cosmos.msg.v1.signer) = "oracle_address";
  option (amino.name) = "crosschain/MsgAddOracleDeposit";

  string oracle_address = 1;
  cosmos.base.v1beta1.Coin amount = 2 [ (gogoproto.nullable) = false ];
  string chain_name = 3;
}

message MsgCancelSendToExternal {
  option deprecated = true;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "crosschain/MsgCancelSendToExternal";

  uint64 transaction_id = 1;
  string sender = 2;
  string chain_name = 3;
}

message MsgRequestBatch {
  option deprecated = true;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "crosschain/MsgRequestBatch";

  string sender = 1;
  string denom = 2;
  string minimum_fee = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string fee_receive = 4;
  string chain_name = 5;
  string base_fee = 6 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

message MsgIncreaseBridgeFee {
  option deprecated = true;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "crosschain/MsgIncreaseBridgeFee";

  string chain_name = 1;
  uint64 transaction_id = 2;
  string sender = 3;
  cosmos.base.v1beta1.Coin add_bridge_fee = 4 [ (gogoproto.nullable) = false ];
}
